# accounting-system

./: .gitignore  Cargo.toml  Dockerfile  README.md  accounting_system_requests.http  benchmark.yml  compose.yml  requests.http  tenant.http  test_environment.env
accounting_system_rust/accounting_system/: Cargo.toml  requests.http
accounting_system_rust/accounting_system/src/: configurations.rs  lib.rs  main.rs
accounting_system_rust/accounting_system/src/accounting/: mod.rs  postgres_factory.rs
accounting_system_rust/accounting_system/src/accounting/account/: account_dao.rs  account_db_mapping.rs  account_http_api.rs  account_models.rs  account_service.rs  mod.rs
accounting_system_rust/accounting_system/src/accounting/currency/: currency_dao.rs  currency_db_mapping.rs  currency_http_api.rs  currency_models.rs  currency_service.rs  mod.rs
accounting_system_rust/accounting_system/src/accounting/user/: mod.rs  user_dao.rs  user_http_api.rs  user_models.rs  user_service.rs
accounting_system_rust/accounting_system/src/audit_table/: audit_dao.rs  audit_model.rs  audit_service.rs  audit_table_db_mapping.rs  audit_table_http_api.rs  mod.rs
accounting_system_rust/accounting_system/src/audit_table/audit_table_sql/: audit_table_ddl.sql  audit_table_functions_and_procedures.sql
accounting_system_rust/accounting_system/src/common_utils/: cache_utils.rs  common_utils_db_mapping.rs  dao_error.rs  db_row_conversion_utils.rs  mime_types.rs  mod.rs  utils.rs
accounting_system_rust/accounting_system/src/common_utils/common_utils_sql/: common_utils_ddl.sql  common_utils_functions_and_procedures.sql
accounting_system_rust/accounting_system/src/common_utils/macro_utils/: http_api_test_macros.rs  mod.rs
accounting_system_rust/accounting_system/src/common_utils/pagination/: constants.rs  mod.rs  pagination_db_mapping.rs  pagination_utils.rs
accounting_system_rust/accounting_system/src/common_utils/pg_util/: mod.rs  pg_util.rs
accounting_system_rust/accounting_system/src/db_schema_syncer/: db_struct_mapper.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/: calculations.rs  doc_conversion.rs  invoicing_dao.rs  invoicing_dao_models.rs  invoicing_db_mapping.rs  invoicing_domain_models.rs  invoicing_http_api.rs  invoicing_request_models.rs  invoicing_service.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/additional_charge/: additional_charge_dao.rs  additional_charge_db_mapping.rs  additional_charge_models.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/invoice_template/: invoice_template_dao.rs  invoice_template_db_mapping.rs  invoice_template_http_api.rs  invoice_template_models.rs  invoice_template_service.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/invoicing_series/: invoicing_series_counter_db_mapping.rs  invoicing_series_dao.rs  invoicing_series_http_api.rs  invoicing_series_models.rs  invoicing_series_mst_db_mapping.rs  invoicing_series_service.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/invoicing_sql/: invoice.csv  invoicing_ddl.sql  invoicing_functions_and_procedures.sql
accounting_system_rust/accounting_system/src/invoicing/line_subtitle/: line_subtitle_dao.rs  line_subtitle_db_mapping.rs  line_subtitle_models.rs  mod.rs
accounting_system_rust/accounting_system/src/invoicing/line_title/: line_title_dao.rs  line_title_db_mapping.rs  line_title_models.rs  (+1 more)
accounting_system_rust/accounting_system/src/ledger/: ledger_models.rs  ledger_transfer_dao.rs  ledger_transfer_db_mapping.rs  ledger_transfer_http_api.rs  ledger_transfer_service.rs  mod.rs
accounting_system_rust/accounting_system/src/masters/: mod.rs
accounting_system_rust/accounting_system/src/storage/: storage_service.rs
accounting_system_rust/accounting_system/src/tenant/: mod.rs  tenant_dao.rs  tenant_db_mapping.rs  tenant_http_api.rs  tenant_models.rs  tenant_service.rs
accounting_system_rust/adhoc-scripts/: Cargo.toml
accounting_system_rust/adhoc-scripts/src/: main.rs
accounting_system_rust/db_prep_tool/: Cargo.toml
accounting_system_rust/db_prep_tool/src/: main.rs
accounting_system_rust/gstin_validator/: Cargo.toml
accounting_system_rust/gstin_validator/src/: gstin_models.rs  lib.rs
accounting_system_rust/invoice_doc_generator/: Cargo.toml  build.rs  hsn.csv  sac.csv
accounting_system_rust/invoice_doc_generator/src/: hsc_sac.rs  hsn_code_generated.rs  hsn_sac.rs  invoice_line1.rs  invoice_number.rs  lib.rs  sac_code_generated.rs
accounting_system_rust/invoice_doc_generator/src/invoice_line/: line_number.rs  line_quantity.rs  line_subtitle.rs  line_title.rs  mod.rs  unit_price.rs
accounting_system_rust/invoice_doc_generator/src/percentages/: mod.rs  tax_discount_cess.rs
accounting_system_rust/invoicing_calculations/: Cargo.toml
accounting_system_rust/invoicing_calculations/src/: additional_charge.rs  invoice_line.rs  lib.rs
accounting_system_rust/pdf_doc_generator/: Cargo.toml
accounting_system_rust/pdf_doc_generator/src/: fonts.rs  invoice_template.rs  lib.rs  main.rs  world.rs
accounting_system_rust/pdf_doc_generator/typst_templates/invoice/: data.typ  invoice_data.json  invoice_lines.typ  invoice_summary.typ  main.typ  tablex.typ  tax_summary.typ  typst.toml
accounting_system_rust/storage_service/: Cargo.toml
accounting_system_rust/storage_service/src/: lib.rs  storage_service.rs
accounting_system_rust/user_journey_testing/: Cargo.toml
accounting_system_rust/user_journey_testing/src/: business_entity.rs  currency.rs  invoice.rs  invoice_series.rs  invoice_template.rs  invoicing_journey.md  main.rs  product_item.rs  tenant.rs  user.rs  util.rs
db_prep_tool/: Cargo.toml
db_prep_tool/src/: lib.rs  main.rs
invoice_doc_generator/: Cargo.toml  build.rs  hsn.csv  sac.csv
invoice_doc_generator/src/: hsc_sac.rs  invoice_line.rs  invoice_line1.rs  invoice_number.rs  lib.rs
invoice_doc_generator/src/invoice_line/: line_number.rs  line_quantity.rs  line_subtitle.rs  line_title.rs  mod.rs  unit_price.rs
invoice_doc_generator/src/percentages/: tax_discount_cess.rs
(+484 files in other folders)
