[package]
name = "accounting-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
env_logger = "0.10.0"
log = "0.4.19"
thiserror = "1.0.43"
chrono = "0.4.26"
csv = "1.2.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
regex = "1.9.1"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
rand = "0.8.5"

[dev-dependencies]
testcontainers = "0.14.0"
rstest = "0.18.1"
