[package]
name = "accounting-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.7", features = ["with-uuid-1", "with-serde_json-1"] }
futures-util = "0.3.28"
pin-utils = "0.1.0"
bytes = "1.5.0"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.49"
chrono = "0.4.31"
csv = "1.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
regex = "1.9.6"
uuid = { version = "1.4.1", features = ["v7", "serde", "fast-rng"] }
rand = "0.8.5"
actix-web = "4.4.0"
deadpool-postgres = "0.11.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
async-trait = "0.1.73"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = { version = "1.32.0", features = ["full"] }
config = "0.13.3"
gstin_validator = {path="gstin_validator"}
invoicing_calculations={path="invoicing_calculations"}
const_format = "0.2.31"
moka = {version="0.12.0",features = ["future"]}
[dev-dependencies]
testcontainers = "0.15.0"
rstest = "0.18.2"
spectral = "0.6.0"
mockall = "0.11.4"
