[package]
name = "db_prep_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.3.3", features = ["derive"] }
postgres = { version = "0.19.7", features = ["with-uuid-1", "with-serde_json-1"] }
pin-utils = "0.1.0"
csv = "1.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
deadpool-postgres = "0.11.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
async-trait = "0.1.73"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bytes = "1.5.0"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }