[package]
name = "invoice_doc_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
lazy_static = "1.4.0"
thiserror = "1.0.40"
gstin_validator = {path="../gstin_validator"}
regex="1.9.1"
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
[dev-dependencies]
rstest = "0.18.2"
spectral = "0.6.0"
[build-dependencies]
csv = "1.2.2"