[package]
name = "accounting-system"
version = "0.1.0"
edition = "2021"
[lib]
name = "accounting_system"
path = "src/lib.rs"

[[bin]]
name = "accounting_system"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2.6", features = ["derive" ] }
postgres = { version = "0.19.7", features = ["with-uuid-1", "with-serde_json-1"] }
futures-util = "0.3.30"
pin-utils = "0.1.0"
bytes = "1.5.0"
env_logger = "0.11.1"
log = "0.4.20"
thiserror = "1.0.56"
chrono = { version = "0.4.33", features = ["serde"] }
chrono-tz = "0.8.5"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
regex = "1.10.3"
uuid = { version = "1.7.0", features = ["v7", "serde", "fast-rng"] }
rand = { version = "0.8.5", features = ["small_rng"] }
actix-web = "4.5.1"
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
async-trait = "0.1.77"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = { version = "1.36.0", features = ["full"] }
config = "0.14.0"
gstin_validator = { path = "../gstin_validator" }
invoicing_calculations = { path = "../invoicing_calculations" }
invoice_doc_generator = { path = "../invoice_doc_generator" }
pdf_doc_generator={path = "../pdf_doc_generator"}
storage_service={path="../storage_service"}
const_format = "0.2.32"
moka = { version = "0.12.5", features = ["future"] }
lazy_static = "1.4.0"
anyhow = "1.0.79"
tracing = {version =  "0.1.40" }
tracing-subscriber = { version = "0.3.18",features = ["env-filter"] }
itertools = "0.12.1"
maplit = "1.0.2"
xxhash-rust = { version = "0.8.8", features = ["xxh32"] }
validator = { version = "0.16.1", features = ["derive"] }
derive_builder = "0.13.0"
actix-web-lab = "0.20.2"
[dev-dependencies]
invoice_doc_generator = { path = "../invoice_doc_generator", features = ["test_utils"] }
testcontainers = "0.15.0"
rstest = "0.18.2"
spectral = "0.6.0"
mockall = "0.12.1"
tracing-test = "0.2.4"
