[package]
name = "accounting-system"
version = "0.1.0"
edition = "2021"
[lib]
name = "accounting_system"
path = "src/lib.rs"

[[bin]]
name = "accounting_system"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
postgres-types = { version = "0.2", features = ["derive"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
futures-util = "0.3"
pin-utils = "0.1"
bytes = "1"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = [] }
regex = "1"
uuid = { version = "1", features = ["v7", "serde", "fast-rng"] }
rand = { version = "0.8", features = ["small_rng"] }
actix-web = "4"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
async-trait = "0.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["full"] }
config = "0.14"
gstin_validator = { path = "../gstin_validator" }
invoicing_calculations = { path = "../invoicing_calculations" }
invoice_doc_generator = { path = "../invoice_doc_generator" }
pdf_doc_generator = { path = "../pdf_doc_generator" }
storage_service = { path = "../storage_service" }
cess_models = { path = "../cess_models" }
const_format = "0.2"
moka = { version = "0.12", features = ["future"] }
lazy_static = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.12"
maplit = "1"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
validator = { version = "0.16", features = ["derive"] }
derive_builder = "0.13"
actix-web-lab = "0.20"
[dev-dependencies]
invoice_doc_generator = { path = "../invoice_doc_generator", features = ["test_utils"] }
testcontainers = "0.15.0"
rstest = "0.18.2"
speculoos = "0.11.0"
mockall = "0.12.1"
tracing-test = "0.2.4"
