[package]
name = "adhoc-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
uuid = { version = "1.4.1", features = ["v7", "serde", "fast-rng"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
itertools = "0.12.0"