[package]
name = "db_prep_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1"] }
pin-utils = "0.1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
async-trait = "0.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
accounting-system = { path = "../accounting_system" }