[package]
name = "gstin_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
regex = "1.10.3"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.18.2"
spectral = "0.6.0"