[package]
name = "invoice_doc_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_utils=[]
[dependencies]
derive_builder = "0.13.0"
csv = "1.3.0"
lazy_static = "1.4.0"
thiserror = "1.0.56"
gstin_validator = {path="../gstin_validator"}
regex="1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
[dev-dependencies]
rstest = "0.18.2"
spectral = "0.6.0"
[build-dependencies]
csv = "1.3.0"