[package]
name = "invoice_doc_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_utils=[]
[dependencies]
derive_builder = "0.13"
csv = "1"
thiserror = "1"
gstin_validator = { path = "../gstin_validator" }
regex = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
[dev-dependencies]
rstest = "0.18"
speculoos = "0.11"
[build-dependencies]
csv = "1"