[package]
name = "invoicing_calculations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
cess_models={path = "../cess_models"}
[dev-dependencies]
rstest = "0.18.2"
speculoos = "0.11.0"