[package]
name = "invoicing_calculations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
cess_models = { path = "../cess_models" }
[dev-dependencies]
rstest = "0.18"
speculoos = "0.11"