[package]
name = "storage_service"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = { version = "1" }
async-trait = "0.1"
anyhow = "1"
rand = { version = "0.8", features = [] }
url = "2"
reqwest = "0.11"
[dev-dependencies]
speculoos = "0.11"