[package]
name = "user_journey_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["v7", "serde"] }
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
cess_models = { path = "../cess_models" }
rand = "0.8"
regex = "1"